--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,13 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
+  jni: ^0.12.0
 
 dev_dependencies:
   bloc_test: ^9.1.7
   flutter_test:
     sdk: flutter
+  jnigen: ^0.12.0
   mocktail: ^1.0.4
   very_good_analysis: ^6.0.0
 
